v3/src/components/case-table/case-table.scss
@use "../vars.scss";
@use "./case-table-shared.scss" as shared;

$table-body-font-size: 8pt;

.case-table {
  position: relative;
  width: 100%;
  height: calc(100% - vars.$title-bar-height);
  background-color: white;

  .case-table-content {
    width: 100%;
    height: 100%;
    display: flex;
    overflow: auto hidden;

    .collection-table {
      height: 100%;
      display: flex;
      align-items: stretch;

      .collection-table-and-title {
        height: 100%;
        display: flex;
        flex-direction: column;

        .collection-title-wrapper {
          position: relative;
          width: 100%;
          height: 26px;
          background-color: vars.$codap-teal-lighter;
          display: flex;
          align-items: center;
          flex-shrink: 0;

          .collection-title {
            position: absolute;
            text-align: center;
            font-family: "museo-sans", sans-serif;
            font-size: 12px;
            text-overflow: ellipsis;
            cursor: text;
            vertical-align: middle;
            white-space: nowrap;
            user-select: none;
            font-style: italic;
            color: #0f2633; // Not used anywhere else at the moment, so we're leaving it unnamed
          }

          .add-attribute-icon-button {
            background-color: transparent;
            width: 22px;
            height: 22px;
            border: none;
            position: absolute;
            padding-inline-start: 12px;
            padding-inline-end: 0;
            z-index: 6;

            .add-icon {
              visibility: hidden;
              fill: #8b8b8b;
              &.focused {
                visibility: visible;
                opacity: 0.5;
                cursor: pointer;
                &:hover {
                  opacity: 1;
                }
              }
            }
          }
        }
      }

      .collection-table-spacer-divider {
        width: 1px;
        background-color: white;
      }

      .collection-table-spacer {
        position: relative;
        width: 48px;
        height: 100%;
        background: white;
        display: flex;
        flex-direction: column;

        &.parentMost {
          width: 30px;

          .drop-message {
            left: 7px;
          }
        }

        &.active {
          border: 5px solid rgba(255, 216, 102, 0.5);

          .spacer-top {
            border-bottom: 0;
            background: white;
          }
        }

        &.over {
          background: rgba(255, 255, 0, 0.5);

          .spacer-top {
            border-bottom: 0;
            background: rgba(255, 255, 0, 0.5);
          }
        }

        .spacer-top {
          height: calc(vars.$title-bar-height + vars.$header-height + 1px);
          background-color: #f9f9f9; // --rdg-header-background-color
          width: 100%;
          border-bottom: 1px solid var(--codap-colors-chakra-border-color);
          overflow: hidden;
          position: relative;
          z-index: 5; // hides the expand/collapse button when scrolled

          .expand-collapse-button {
            position: absolute;
            bottom: 6px;
            left: 3px;
          }
        }

        .spacer-mid {
          width: 100%;
          flex-grow: 1;

          .spacer-mid-layer {
            position: relative;
            width: 100%;
            height: 100%;

            &.lower-layer {
              position: absolute;
            }
          }
        }

        .expand-collapse-button {
          position: absolute;
          display: flex;
          cursor: pointer;
          width: 9px;
          height: 9px;
          -webkit-tap-highlight-color: rgba(0, 0, 0, 0);

          .expand-collapse-image {
            width: 9px;
            height: 9px;
            &.closed {
              background-image: url("../../assets/expand.gif");
            }
            &.open {
              background-image: url("../../assets/collapse.gif");
            }
          }
        }

        .drop-message {
          position: absolute;
          bottom: 0;
          left: 17px;
          transform: rotate(-90deg);
          transform-origin: left;
          white-space: nowrap;
          font: 12px sans-serif;
          opacity: 100%;
        }
      }
    }
  }

  .rdg {
    width: 100%;
    height: 100%;
    scroll-behavior: smooth;

    font-family: Montserrat, sans-serif !important;
    font-size: $table-body-font-size !important;
    color: #222222;
    border-radius: vars.$border-radius-bottom-corners;
    overflow-x: hidden;

    .rdg-header-row {
      line-height: 14px !important;

      .codap-column-header {
        text-align: center;
        height: shared.$header-row-height-px !important;
        &.index {
          pointer-events: none;
          cursor: auto;
        }

        .codap-column-header-content {
          width: 100%;
          height: 100%;
          display: flex;
          align-items: center;
          justify-content: center;

          input {
            height: calc(100% - 6px)
          }

          // chakra menu-button
          button {
            width: 100%;
            color: #555555 !important;
          }
        }
      }
    }

    .rdg-row {
      input.rdg-text-editor {
        font-size: $table-body-font-size;
      }
      &.rdg-row-even {
        .codap-index-cell {
          background-color: #EEFEE3;
        }
      }
      &.rdg-row-odd {
        &[aria-selected=false] {
          background: #fafafa;
        }
        .codap-index-cell {
          background-color: #D3E9C8;
        }
      }
    }

    .rdg-cell {
      // RDG.beta.17 moved all CSS inside @layers, which decreased their priority
      // so that some of Chakra's CSS takes precedence, including the gridlines.
      // These lines assert the RDG gridlines precedence ahead of Chakra's CSS.
      padding-inline: 4px;
      border-inline-end: 1px solid var(--rdg-border-color);
      border-block-end: 1px solid var(--rdg-border-color);

      &.codap-index-cell {
        padding-inline: 0;
        text-align: center;

        .codap-index-content {
          width: 100%;
          height: 100%;
          display: flex;
          align-items: center;
          justify-content: center;

          &.collapsed {
            text-align: left
          }

          &.input-row {
            background-color: #bddfdf;
            justify-content: flex-start;

            svg {
              margin-left: -2px;
            }
          }
        }
      }

      .cell-color-swatch {
        width: 100%;
        height: 100%;
        display: flex;
        align-items: center;
        justify-content: center;

        .cell-color-swatch-interior {
          width: calc(100% - 4px);
          height: calc(100% - 8px);
          margin-top: 0.5px;
        }
      }

      .color-cell-text-editor {
        width: 100%;
        height: 100%;
        display: flex;
        padding-inline-start: 2px;

        .cell-edit-color-swatch {
          width: 12px;
          padding: 4px 2px 3px 0;

          .cell-edit-color-swatch-interior {
            width: 100%;
            height: 100%;
            border: 1px solid gray;
          }
        }
      }
    }
  }

  .codap-column-header-divider {
    position: absolute;
    background: black;
    opacity: 0%;
    pointer-events: none;

    &.over {
      opacity: 30%;
    }
  }
}

.no-cases-message {
  font-size: 14px;
  font-style: italic;
  position: absolute;
  text-align: center;
  top: 58px;
  width: 100%;
}

.codap-menu-list {
  width: 190px;

  .menu-item {
    font-family: 'museo-sans', sans-serif;
    font-size: 12px;
    line-height: 20px;
    padding: 0 5px 0 20px;
  }
}

// turn off `scroll-behavior: smooth` when necessary (e.g. for cypress tests)
.scroll-behavior-auto .case-table .collection-table .rdg {
  scroll-behavior: auto
}

